display list animmals

--- a/templates/animal/index.html.twig
+++ b/templates/animal/index.html.twig
@@ -3,4 +3,15 @@
 {% block title %}Accueil{% endblock %}
 {% block myTitle %}Accueil{% endblock %}
 {% block body %}
+  {% for animal in animals %}
+  <div class="row align-items-centers" >
+    <div class="col-2 text-center">
+      <img src="{{asset('images/' ~ animal.picture)}}" alt="nom animal" />
+    </div>
+    <div class="col-auto">
+      <h2>{{animal.name}}</h2>
+      <div>{{animal.description}}</div>
+    </div>
+  </div>
+  {% endfor %}
 {% endblock %}
