--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{path("animal")}}">Accueil</a>
+        <a class="nav-link" href="{{path("animals-list")}}">Liste animaux</a>
       </li>
     </ul>
   </div>
