--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,6 +9,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{path("animals-list")}}">Liste animaux</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{path("family")}}">Famille animaux</a>
+      </li>
     </ul>
   </div>
 </nav>
