--- a/templates/animal/detail.html.twig
+++ b/templates/animal/detail.html.twig
@@ -16,6 +16,7 @@
       {% else %}
         <span class="badge badge-success"> Non </span>
       {% endif %}
+      <h2><a class="btn btn-primary" href='{{path("family-detail",{"id":animal.family.id})}}'>{{animal.family.name|capitalize}}</a></h2>
     </div>
   </div>
 {% endblock %}
