--- a/templates/continent/index.html.twig
+++ b/templates/continent/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contients{% endblock %}
+{% block title %}Continents{% endblock %}
 {% block myTitle %}Continents{% endblock %}
 {% block body %}
   {% for continent in continents %}
