--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -15,6 +15,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{path("continents")}}">Liste continents</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{path("person")}}">Liste personnes</a>
+      </li>
     </ul>
   </div>
 </nav>
